fix: fix contrast in header

--- a/src/widgets/Header/header.scss
+++ b/src/widgets/Header/header.scss
@@ -5,4 +5,21 @@
   left: 0;
   z-index: 1020;
   transition: .7s;
+  font-weight: 700;
+}
+
+.nav-link {
+  color: rgba(255, 255, 255, 0.75)!important;
+}
+
+.nav-link.active {
+  color: rgba(255, 255, 255, 1)!important;
+}
+
+.nav-link:hover {
+  color: rgba(255, 255, 255, 1) !important;
+}
+
+.sticky-header.bg-secondary {
+  background-color: rgb(63, 65, 68)!important;
 }
